<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jax.clickablewidget.MainActivity">
<LinearLayout
    android:id="@+id/ln"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
 android:gravity="center_horizontal">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickChooseRed"
        android:src="@drawable/circle_red" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ibt1"
        android:onClick="clickChooseBlue"
        android:src="@drawable/circle_blue" />
</LinearLayout>

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ln"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickChooseRed"
            android:text="@string/red_label" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickChooseYellow"
            android:text="@string/yellow_label" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickChooseBlue"
            android:text="@string/blue_label" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@+id/radio">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickToggleChooseRed"
            android:textOff="@string/red_label"
            android:textOn="@string/no_red_label" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickToggleChooseBlue"
            android:textOff="@string/blue_label"
            android:textOn="@string/no_blue_label" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickToggleChooseYellow"
            android:textOff="@string/yellow_label"
            android:textOn="@string/no_yellow_label" />
    </LinearLayout>
    <RadioGroup
        android:id="@+id/radio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ln1"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/red_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_label" />

        <RadioButton
            android:id="@+id/yellow_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow_label" />

        <RadioButton
            android:id="@+id/blue_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue_label" />
    </RadioGroup>
    <Button
        android:id="@+id/bt"
        android:layout_below="@+id/radio1"
        android:onClick="ButtonChoseColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button"/>

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bt" />
</RelativeLayout>
